[tool.poetry]
name = "code_review"
version = "0.1.0"
description = ""
authors = ["Jim Fitzpatrick <jfitzpat@redhat.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mkdocs = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
